--- a/package.json
+++ b/package.json
@@ -17,15 +17,21 @@
   },
   "homepage": "https://github.com/w3cui/ViewEdit#readme",
   "devDependencies": {
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
+    "gulp-connect": "^5.0.0",
     "gulp-header": "^1.8.9",
     "gulp-if": "^2.0.2",
     "gulp-minify-css": "^1.2.4",
+    "gulp-open": "^2.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^3.0.0",
+    "gulp-watch": "^4.3.11",
     "html2canvas": "^0.5.0-beta4",
     "jquery": "^3.2.1",
+    "minimist": "^1.2.0",
+    "os": "^0.1.1",
     "zepto": "^1.2.0"
   }
 }
