--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jquery": "^3.2.1",
     "minimist": "^1.2.0",
     "os": "^0.1.1",
+    "webuploader": "^0.1.8",
     "zepto": "^1.2.0"
   }
 }
